--- a/manifest/manifest.json
+++ b/manifest/manifest.json
@@ -1,26 +1,13 @@
 {
-    "name": "Wow",
-    "short_name": "front",
-    "theme_color": "#00ff00",
-    "background_color": "#ffffff",
-    "display": "fullscreen",
-    "scope": "/",
-    "start_url": "/",
-    "icons": [
-      {
-        "src": "./gold-star-192.png",
-        "type": "image/png",
-        "sizes": "192x192"
-      },
-      {
-        "src": "./gold-star-256.png",
-        "type": "image/png",
-        "sizes": "256x256"
-      },
-      {
-        "src": "./gold-star-512.png",
-        "type": "image/png",
-        "sizes": "512x512"
-      }
-    ]
-  }
+  "name":"Front-app",
+  "short_name":"front",
+  "theme_color":"#00ff00",
+  "background_color":"#ffffff",
+  "display":"fullscreen",
+  "orientation":"any",
+  "scope":"/",
+  "start_url":"/",
+  "icons":[
+      {"src":"/manifest-icons/LogoOff-192.png","type":"image/png","sizes":"192x192"},
+      {"src":"/manifest-icons/LogoOff-256.png","type":"image/png","sizes":"256x256"},
+      {"src":"/manifest-icons/LogoOff-512.png","type":"image/png","sizes":"512x512"}]}
